# irisui

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
docs/: FEATURES.md  README.md
scripts/: start-ollama-dev.mjs  systemStatsPlugin.ts
src/: App.tsx  constants.ts  index.css  main.tsx  theme.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: keys.rs  lib.rs  main.rs
src/components/: ArenaColumn.tsx  ArenaPage.tsx  ChatHeader.tsx  ChatInput.tsx  CommandPalette.tsx  ComposerBanner.tsx  ConfirmDialog.tsx  ContextMeter.tsx  EmptyState.tsx  HardwarePanel.tsx  HomeScreen.tsx  HuggingFaceBrowser.tsx  IrisMark.tsx  KnowledgePage.tsx  Markdown.tsx  Message.tsx  MessageList.tsx  MigrationNotice.tsx  ModelRow.tsx  ModelsPage.tsx  PersonasSection.tsx  PromptLibrarySection.tsx  SettingsAppearance.tsx  SettingsChatDefaults.tsx  SettingsConnection.tsx  SettingsData.tsx  SettingsModal.tsx  SettingsProviders.tsx  SettingsVoice.tsx  Sidebar.tsx  Spark.tsx  Sparkline.tsx  StatsPage.tsx  StudioPage.tsx  SystemMonitor.tsx  TopBar.tsx  WhisperDownload.tsx
src/hooks/: useAppSettings.ts  useArena.ts  useChat.ts  useCountUp.ts  useKbs.ts  useModelPrefs.ts  useModelPull.ts  useShortcuts.ts  useSpeech.ts  useStudio.ts  useSystemMonitor.ts  useTheme.ts
src/lib/: appSettings.ts  arena.ts  asrModels.ts  backup.ts  context.ts  contextGuard.ts  exporters.ts  firstRun.ts  format.ts  hardware.ts  http.ts  huggingface.ts  idbStore.ts  kbStore.ts  kvCache.ts  modelCatalog.ts  modelPrefs.ts  motion.ts  motionFeatures.ts  ollama.ts  personaPrompt.ts  rag.ts  ragContext.ts  recommend.ts  recorder.ts  retrieve.ts  shortcuts.ts  speech.ts  stats.ts  statsStore.ts  store.ts  studioStore.ts  tts.ts  (+2 more)
vite/: keyStore.ts  providerProxyPlugin.ts
(+65 files in other folders)
