[package]
name = "irisui"
version = "0.0.0"
description = "IrisUI — a local-first chat client for Ollama"
authors = ["ibrokhimel"]
edition = "2021"
rust-version = "1.77.2"

# The library the desktop binary wraps. `_lib` suffix avoids a name collision
# with the binary target on Windows.
[lib]
name = "irisui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Backs the system_stats command (CPU/RAM/disk). GPU comes from nvidia-smi.
sysinfo = "0.32"
# Backs the http_fetch command. We do NOT use tauri-plugin-http: it stamps the
# webview's Origin (http://tauri.localhost on a Windows release build) onto every
# request, and Ollama answers 403 to any origin outside its allowlist. Issuing the
# request ourselves lets us send no Origin at all, which Ollama accepts.
reqwest = { version = "0.12", default-features = false, features = ["stream", "rustls-tls", "charset", "http2"] }
futures-util = "0.3"
